Fix highlight color contrast in dark mode

--- a/frontend/styles/components/misc.scss
+++ b/frontend/styles/components/misc.scss
@@ -6,6 +6,7 @@
 
 .highlight {
   background: $highlight;
+  color: $highlight-color;
 }
 
 [v-cloak] {
